--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -23,11 +23,9 @@
   box-sizing: border-box;
 }
 
-
 body {
-  font-family: 'Inria Serif', Helvetica, Arial, sans-serif;
+  font-family: "Inria Serif", Helvetica, Arial, sans-serif;
 }
-
 
 @layer base {
   :root {
@@ -85,14 +83,13 @@ body {
   }
 }
 
-
 @layer base {
   * {
     @apply border-border;
   }
 
   html {
-    font-family: 'Inria Serif', serif;
+    font-family: "Inria Serif", serif;
   }
 
   body {
