--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,14 @@
 @tailwind utilities;
 
 :root {
-  --primary: rgb(226, 189, 163);
+  --primary: #dfba9f;
   --secondary: #f7ccdc;
-  --tertiary: rgb(253, 249, 175);
+  --tertiary: #fdf9af;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary: #efbdc3;
+    --primary: hsl(25, 50%, 75%);
     --secondary: rgb(247, 204, 220);
   }
 }
@@ -35,7 +35,7 @@ body {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 25 50% 75%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
@@ -62,7 +62,7 @@ body {
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --primary: 25 50% 75%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
